glx/testdata/invalid/archive-broken-references.glx
# Invalid: Multiple broken cross-references in multi-entity archive
persons:
  person-john-smith:
    concluded_identity:
      primary_name: "John Smith"
  
  person-mary-brown:
    concluded_identity:
      primary_name: "Mary Brown"

relationships:
  rel-marriage:
    type: "marriage"
    persons:
      - person-john-smith
      - person-nonexistent  # ERROR: References non-existent person

events:
  event-john-birth:
    type: "birth"
    place: place-nonexistent  # ERROR: References non-existent place
    participants:
      - person: person-another-nonexistent  # ERROR: References non-existent person
        role: "principal"

citations:
  citation-birth:
    source: source-nonexistent  # ERROR: References non-existent source
    locator: "Page 23"

assertions:
  assertion-birth:
    subject: person-yet-another-nonexistent  # ERROR: References non-existent entity
    claim: "Birth date is 1850-01-15"
    citations:
      - citation-nonexistent  # ERROR: References non-existent citation

